--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "canvas-confetti": "^1.9.2",
     "framer-motion": "^10.18.0",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
